--- a/app/src/main/res/layout/item_chatting.xml
+++ b/app/src/main/res/layout/item_chatting.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/tvMessage"
@@ -11,6 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="16dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textStyle="bold" />
+
     </LinearLayout>
 </layout>
